fixed bugs with spacing, added bottom hover border to header links when onlarger screens

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -41,21 +41,21 @@ h1 {
     font-family: 'Oswald' , sans-serif;
     text-transform: uppercase;
     letter-spacing: 2px;
-    color: #252525
+    color: #252525;
 }
 
 #menu {
     font-size: 110%;
     letter-spacing: 4px;
-    list-style: none;
+    list-style-type: none;
 }
 
-#menu li {
+#menu > li {
     margin-bottom: 1em;   
 }
 
 .active {
-    border-bottom: #3a3a3a;
+    border-bottom: 1px solid #3a3a3a;
 }
 
 /* Navbar styles with dropdown toggle*/
@@ -63,7 +63,6 @@ nav {
     position:absolute;
     background-color: #ffffff;
     padding: 0 1rem;
-    z-index: 98;
     width: 100%;
     box-shadow: 0 2px 2px #3a3a3a;
     left: 0;
@@ -104,7 +103,7 @@ footer {
         position: relative ;
         box-shadow: none;
         width: fit-content;
-        padding: 1rem ;
+        padding-right: 1rem ;
 
     }
     #menu {
@@ -116,4 +115,22 @@ footer {
     .nav-toggle-label {
         display: none;
     }
+
+    #logo {
+        font-size: 280%;
+        line-height: 75px;
+        margin: 0 0.5rem;
+    }
+    /*Main Content*/
+    main {
+        margin-top: 79px;
+    }
+}
+
+/*Large Devices (laptops and desktops, 992px and up)*/
+@media screen and (min-width: 992px) {
+    #menu a:hover{
+        border-bottom: 1px solid #3a3a3a;
+    }
+    
 }
